# Agentic_HUB

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start_hub_and_vanta.bat  start_vanta_os.bat
agent_specs/: README.md  echo_worker.yaml
configs/: agents.yaml  hub.yaml  management.yaml  models.yaml  routing.yaml  skills.yaml  tools.yaml  workflows.yaml
data/: hub.db  hub_state.json  telegram_update_offset.txt
docs/: PACKAGE_DLC_DEVELOPMENT.md  aria-style-remodel.md  pack_development.md  vanta_incidents.md
examples/: bootstrap.py
hub/: approval_manager.py  approval_response_handler.py  artifact_store.py  catalog_manager.py  config.py  dead_task_store.py  dispatcher.py  event_log.py  executor.py  handlers.py  hub.py  legacy_task_mapper.py  legacy_worker_adapter.py  logger.py  main.py  memory_manager.py  policy_resolver.py  runtime_coordinator.py  runtime_status.py  sqlite_memory_store.py  state.py  task_store.py  tasks.py  worker_adapter.py  worker_runner.py
registries/: __init__.py  tool_registry.py  worker_registry.py
runtime/: state.json  tasks.json
schemas/: approval.py  artifact.py  loadout.py  memory_policy.py  task.py  task_result.py  tool_definition.py  tool_policy.py  worker_base.py  worker_role.py  worker_type.py
skills/: delegation_discipline.md  general_style.md  hub_system_map.md  planning_checklist.md  vanta_operator.md
tests/: conftest.py  test_agent_factory.py  test_agent_os_runtime_v0.py  test_approval_bridge.py  test_approval_manager.py  test_approval_response_handler.py  test_artifact_store.py  test_catalog_manager.py  test_command_handlers.py  test_config_loading.py  test_control_plane.py  test_conversation_memory.py  test_dead_task_store.py  test_dispatcher.py  test_event_log.py  test_hub.py  (+31 more)
(+198 files in other folders)
