[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-ai-hub"
version = "0.1.0"
description = "Self-hosted personal AI hub with an external control plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hub-runtime = "hub.main:main"
hub-control = "control_plane.main:main"
agent-os = "agent_os.main:main"
vanta-core = "vanta_core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
