[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-hub"
version = "0.1.0"
description = "Agentic Hub core runtime with DLC-style content packs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "annotated-types==0.7.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "colorama==0.4.6",
  "dotenv==0.9.9",
  "idna==3.11",
  "iniconfig==2.3.0",
  "packaging==26.0",
  "pluggy==1.6.0",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "pytest==9.0.2",
  "python-dotenv==1.2.2",
  "requests==2.32.5",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "urllib3==2.6.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
